# drf-api-permissions-postgres

./: pyproject.toml
duck_blog/: Dockerfile  db.sqlite3  docker-compose.yml  requirements.txt
duck_blog/duck_blog/: settings.py  urls.py
duck_blog/ducks/: admin.py  models.py  tests.py  urls.py
duck_blog/ducks/api/: permissions.py  serializers.py  viewsets.py
tests/: test_api_permissions.py
